--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "nelmio/alice": "2.0.x-dev",
-        "doctrine/common": "~2.1",
+        "nelmio/alice": "~2.1",
+        "doctrine/common": "~2.4",
         "psr/log": "~1.0",
         "symfony/finder": "~2.0"
     },
@@ -21,8 +21,8 @@
         "phpunit/phpunit": "~4.0",
         "symfony/framework-bundle": "~2.1",
         "doctrine/orm": "~2.1",
-        "doctrine/mongodb-odm": "1.0.*@dev",
-        "doctrine/mongodb-odm-bundle": "3.0.*@dev",
+        "doctrine/mongodb-odm": "~1.0",
+        "doctrine/mongodb-odm-bundle": "~3.0",
         "matthiasnoback/symfony-config-test": "~0.2.1"
     },
     "autoload": {
